--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,13 @@ img{
     p{ 
             font-size: 1.6em;   
     }
+    .main .d-flex p {
+        text-align: center;
+        font-size: 2.1em;   
     }
+          
+      
+}
 
 /*---------Nav bar---------------*/
 
@@ -74,11 +80,6 @@ nav a.nav-link {
 }
 nav .nav-item.active a.nav-link{
     font-weight: bold;
-}
-.main .d-flex p {
-  text-align: center;
-    
-    
 }
 
 /*---------------Main-------------*/
@@ -101,15 +102,17 @@ margin-bottom: 40vh;
     
 }
 #fab{
-    font-size: 16px;
-    font-weight: 600;
-    position: fixed;
-    background-color: #3F88FB;
-    padding: 8px 12px 8px 12px; 
-    border-radius: 40px;
-    color: white;
+
     bottom: 1em;
     right: 1em;
+    position: fixed;
     z-index: 9999;
+    font-size: 16px;
+    font-weight: 600;
+    background-color: #166EF8;
+    padding: 8px 12px 8px 12px; 
+    border-radius: 30px;
+    color: white;
+   box-shadow: 0px 1px  3px grey;
 }
 
