--- a/css/style.css
+++ b/css/style.css
@@ -42,35 +42,13 @@ img{
     text-decoration: underline;
     font-weight: 600;
 }
-
-/* ----------Small devices-------*/
-@media (max-width: 720px) {
-    .my-nav {
-          background-color:white;
-    }
-    h1.display-1{
-        text-align: center;
-        
-    }
-    h2{
-        font-size: 2.1em
-    }
-    h3{
-        font-size: 1.6em
-    }
-    p{ 
-            font-size: 1.6em;   
-    }
-    .main .d-flex p {
-        text-align: center;
-        font-size: 2.1em;   
-    }
- 
+.thin-link{
+    color: #4D4D4D;
+    text-decoration: underline;
 }
-/* ----------big devices-------*/
-@media (max-width: 1080px) {
 
-
+.small-text{
+    font-size: 0.8em
 }
 
 /*---------Nav bar---------------*/
@@ -152,4 +130,71 @@ margin-bottom: 40vh;
 #scrollToTopButton.show{
     visibility: visible;
     opacity: 1;
+}
+/*-------------------------About--------------------*/
+h1.display-2{
+    font-size: 3.6em;
+    font-weight: 900;
+    color:#4D4D4D;
+    line-height: 1.6em;
+}
+.carousel-indicators li {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+  }
+.facts-about-me li, .beliefs li{
+    margin: 1em 0;
+}
+.quote{
+    font-family: 'Merriweather', serif;
+    font-weight: 700; 
+    text-align: center;
+}
+#testimonials .carousel-indicators li{
+ background-color: rgb(201, 201, 201);
+ position:relative;
+ top:2em;
+}
+#testimonials .carousel-indicators li.active  {
+    background: #4D4D4D;
+    height: 10px;
+    width: 10px;
+   }
+
+
+
+
+
+   /* ----------Small devices-------*/
+@media (max-width: 720px) {
+    .my-nav {
+          background-color:white;
+    }
+    h1.display-1{
+        text-align: center;
+        
+    }
+    h2{
+        font-size: 2.1em
+    }
+    h3{
+        font-size: 1.6em
+    }
+    p{ 
+            font-size: 1.6em;   
+    }
+    .main .d-flex p {
+        text-align: center;
+        font-size: 2.1em;   
+    }
+    .facts-about-me li, .beliefs li{
+        margin: 1em 0;
+        font-size: 1.6em;
+    }
+    .carousel-indicators li {
+        width: 4px;
+        height: 4px;
+        border-radius: 100%;
+      }
 }
