--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,18 @@ h1.display-2{
 .carousel-control-next-icon{
     outline: #4D4D4D;
 }
+#download-cv{
+border-radius: 5em;
+font-weight: 500;
+border-width: 2px;
+color: #4D4D4D;
+}
+#download-cv:hover{
+    color: white;
+    background: #4D4D4D;
+}
+
+
 
 
    /* ----------Small devices-------*/
