--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,17 @@ img{
     font-size: 0.8rem
 }
 
+.card{
+    border: none;
+    border-radius: 1.5em;
+}
+.card-img-top{
+    border-top-left-radius: 1.5em;
+    border-top-right-radius: 1.5em;
+}
+.card h5{
+   color:black
+}
 /*---------Nav bar---------------*/
 
 nav a.navbar-brand {
@@ -74,6 +85,7 @@ nav .nav-item.active a.nav-link{
     font-weight: bold;
 
 }
+
 
 
 
@@ -275,6 +287,7 @@ body.leaderbio h1.sans-serif{
 body.leaderbio h3{
     color: #006E47;
 }
+
 /*--------------leaderbio------------------*/
 
 
@@ -318,3 +331,21 @@ body.leaderbio h3{
         }
   
 }
+
+@media (max-width: 510px) {
+
+h5{
+    font-size: 1.2em;
+}
+}
+@media (max-width: 400px) {
+    .card-body{
+        display: none;
+    }
+    .card-img-top{
+        border-bottom-left-radius: 1.5em;
+        border-bottom-right-radius: 1.5em;
+    }
+ 
+    }
+    
