--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ img{
 .card{
     border: none;
     border-radius: 1.5em;
+
 }
 .card-img-top{
     border-top-left-radius: 1.5em;
@@ -63,6 +64,24 @@ img{
 .card h5{
    color:black
 }
+
+
+
+.card-columns {
+    @include media-breakpoint-only(sm) {
+        column-count: 1;
+      }
+    @include media-breakpoint-only(md) {
+        column-count: 2;
+      }
+    @include media-breakpoint-only(lg) {
+      column-count: 3;
+    }
+    @include media-breakpoint-only(xl) {
+      column-count:4;
+    }
+  }
+
 /*---------Nav bar---------------*/
 
 nav a.navbar-brand {
@@ -335,17 +354,6 @@ body.leaderbio h3{
 @media (max-width: 510px) {
 
 h5{
-    font-size: 1.2em;
+    font-size: 1.6em;
 }
 }
-@media (max-width: 400px) {
-    .card-body{
-        display: none;
-    }
-    .card-img-top{
-        border-bottom-left-radius: 1.5em;
-        border-bottom-right-radius: 1.5em;
-    }
- 
-    }
-    
