--- a/css/style.css
+++ b/css/style.css
@@ -67,21 +67,6 @@ img{
 
 
 
-.card-columns {
-    @include media-breakpoint-only(sm) {
-        column-count: 1;
-      }
-    @include media-breakpoint-only(md) {
-        column-count: 2;
-      }
-    @include media-breakpoint-only(lg) {
-      column-count: 3;
-    }
-    @include media-breakpoint-only(xl) {
-      column-count:4;
-    }
-  }
-
 /*---------Nav bar---------------*/
 
 nav a.navbar-brand {
@@ -308,7 +293,18 @@ body.leaderbio h3{
 }
 
 /*--------------leaderbio------------------*/
+/*--------------zedlashes-----------------*/
 
+
+body.ecom{
+    color: #164059;
+    background-color: #F2F2F0;
+}
+body.ecom h1{
+    color: #F1AE38;
+}
+
+/*--------------zedlashes------------------*/
 
    /* ----------Small devices-------*/
 @media (max-width: 720px) {
